cfunctions-0.27/tests/bad-options-1.c
// options: -l jub -i
// error: option `--local' is incompatible with option `--individual'
